# ll3m

./: .env  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  docker-compose.yaml  pyproject.toml  readme.md
.github/: CODEOWNERS
.github/workflows/: code-quality.yaml  test.yml
api/: Dockerfile  api.py  requirements.in  requirements.txt
app/: Dockerfile  app.py  requirements.txt
configs/: eval.yaml  eval_mnist.yaml  eval_testing.yaml  train.yaml  train_mnist.yaml  train_testing.yaml
configs/callbacks/: default.yaml  loguru_progress_bar.yaml  tqdm_progress_bar.yaml
configs/data/: llm.yaml  mnist.yaml
configs/experiment/: example.yaml
configs/hparams_search/: optuna.yaml
configs/logger/: mlflow.yaml
configs/model/: llm.yaml  mnist.yaml
configs/optimizer/: ball.yaml
configs/paths/: default.yaml
configs/peft/: lora.yaml
configs/scheduler/: cosine.yaml
deployment/: Dockerfile  configs.py  deploy.py  flows.py  requirements.in  requirements.txt  utils.py
infrastructure/: .terraform.lock.hcl  alb.tf  app.tf  deployment.tf  iam.tf  localstack.tfvars  main.tf  monitoring.tf  orchestration.tf  outputs.tf  rds.tf  routing.tf  s3.tf  secrets.tf  security_groups.tf  tracking.tf  variables.tf
llm/: eval.py  train.py
llm/data/: llm_datamodule.py  mnist_datamodule.py
llm/models/: llm_module.py  mnist_module.py
llm/utils/: __init__.py  logger.py  (+5 more)
monitoring/: dashboard.json  prometheus.yml
scripts/: update_req.sh
tests/: conftest.py  test_datamodules.py  test_eval.py  test_sweeps.py  test_train.py
tracking/: Dockerfile  requirements.txt
